src/objects/Contract__c.object
<CustomObject>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contract_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <inlineHelpText>Contract value</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>